<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.gbook.authentication.views.HomeAuthenticationFragment">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="24dp"
            android:text="@string/g"
            style="@style/go_blue"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/b"
            style="@style/b_red"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/o"
            style="@style/go_blue"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/o"
            style="@style/o_yellow"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="140dp"
            android:text="@string/k"
            style="@style/k_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/textView10"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/edit_profile"
            style="@style/black_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="176dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#E6E2E2"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="121dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_textinput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="176dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#E6E2E2"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="121dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dayBirth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/monthBirth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/month"
            app:layout_constraintEnd_toStartOf="@+id/yearBirth"
            app:layout_constraintStart_toEndOf="@+id/dayBirth"
            app:layout_constraintTop_toBottomOf="@+id/last_name_textinput">

            <AutoCompleteTextView
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearBirth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_textinput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genders"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="379dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthBirth">

            <AutoCompleteTextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/done"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_challenge" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:text="@string/fill_fill"
            style="@style/black_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/done" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_challenge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="379dp"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:hint="@string/_2022_reading_challenge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genders">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/booksNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>