<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gbook.authentication.views.LogInFragment"
    tools:ignore="Autofill, LabelFor">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="24dp"
        android:text="G"
        android:textColor="@color/blue"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="B"
        android:textColor="@color/red"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="o"
        android:textColor="@color/blue"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="o"
        android:textColor="@color/yellow"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="140dp"
        android:text="k"
        android:textColor="@color/green"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etemail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="365dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="120dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--    <EditText-->
<!--        android:id="@+id/etSignInPassword"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginVertical="20dp"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:maxLength="8"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/etSignInEmail"-->
<!--        app:layout_constraintStart_toStartOf="@+id/etSignInEmail"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etSignInEmail" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="365dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="120dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <Button-->
<!--        android:id="@+id/btnCreateAccount2"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginVertical="20dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="384dp"-->
<!--        android:layout_marginBottom="364dp"-->
<!--        android:text="@string/registration"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etPassword"-->
<!--        app:layout_constraintVertical_bias="0.133" />-->

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toEndOf="@+id/btnCreateAccount2"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/btnCreateAccount2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/registration"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.13999999" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </layout>